# msp-sdk

./: .gitignore  PLAN.md  README.md  build_all.sh  build_c.sh  plan.md
.old/: README.md
MSP-Arduino/: .gitignore  pio  platformio.ini  sync.sh
MSP-Arduino/src/: inav_api.cpp  main.cpp  msp_interface.h
arduinolib/: README.md
arduinolib/src/: inav_api.h  inav_defs.h_backup  main.cpp
generator/: README.md  all_defines.h  bad_define_parse.py  gen_all.sh  gen_all_enums.py  gen_enum_yaml.py  gen_msp_header.py  gen_msp_proto.py  get_all_inav_enums_h.py  get_inav_defines.py  make_min_header.py  msp_to_yaml.py  new_get_inav_enums.py  sync_inav.sh  test.c  test.cpp  test_generators.py
generator/cgen_test/: all_defines.h  all_enums.h  demo  gen_all_enums_from_json.py  h_to_enum.py  inav_enums.py  msp_gen.h  msp_protocol_v2_common.h  msp_protocol_v2_sensor.h  test.cpp  test_gen_c.py
include/: all_enums.h  bitarray.c  bitarray.h  inav_enums.json  inav_enums.yaml  msp.yaml  msp_messages.h  msp_messages.json  msp_messages.proto  msp_protocol_v2_inav.h  msp_stub_types.h  msp_types.h  sync.sh
pythonlib/: README.md  pyproject.toml  syncjson.sh
pythonlib/examples/: README.md  example_api.py  flight_computer.py
pythonlib/src/mspapi2/: msp_api.py  msp_serial.py  msp_shell.py  mspcodec.py  utils.py
pythonlib/src/mspapi2/lib/: inav_defines.py  inav_version.py  msp_messages.json
pythonlib/tests/: test_command_helpers.py  test_core_api.py  test_core_codec.py  test_core_transport.py  test_core_utils.py  test_inav_defines.py  test_msp_shell.py
(+10 files in other folders)
